[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/editor/LnzTextEdit.gd" type="Script" id=1]
[ext_resource path="res://scenes/editor/FileTree.gd" type="Script" id=2]
[ext_resource path="res://scenes/dog_generator.gd" type="Script" id=3]
[ext_resource path="res://scenes/editor/PetViewContainer.gd" type="Script" id=4]
[ext_resource path="res://scenes/editor/FrameSlider.gd" type="Script" id=5]
[ext_resource path="res://scenes/editor/PlayButton.gd" type="Script" id=6]
[ext_resource path="res://scenes/editor/FPSLabel.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.501961, 0.501961, 1 )

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("PetRoot/petholder/Viewport")

[node name="Root" type="Node"]

[node name="PetRoot" type="Spatial" parent="."]

[node name="Node" type="Node" parent="PetRoot"]
script = ExtResource( 3 )

[node name="petholder" type="Spatial" parent="PetRoot"]

[node name="balls" type="Spatial" parent="PetRoot/petholder"]

[node name="addballs" type="Spatial" parent="PetRoot/petholder"]

[node name="paintballs" type="Spatial" parent="PetRoot/petholder"]

[node name="lines" type="Spatial" parent="PetRoot/petholder"]

[node name="Viewport" type="Viewport" parent="PetRoot/petholder"]
size = Vector2( 1000, 1000 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="CameraHolder" type="Spatial" parent="PetRoot/petholder/Viewport"]

[node name="Camera" type="Camera" parent="PetRoot/petholder/Viewport/CameraHolder"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, -1 )
keep_aspect = 0
projection = 1
near = 0.01
far = 1000.0

[node name="SceneRoot" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="SceneRoot"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SceneRoot/HSplitContainer"]
margin_right = 335.0
margin_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tree" type="Tree" parent="SceneRoot/HSplitContainer/VBoxContainer"]
margin_right = 335.0
margin_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3
allow_rmb_select = true
hide_root = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemPopupMenu" type="PopupMenu" parent="SceneRoot/HSplitContainer/VBoxContainer/Tree"]
margin_right = 20.0
margin_bottom = 20.0
items = [ "Delete", null, 0, false, false, 0, 0, null, "", false, "Rename", null, 0, false, false, 1, 0, null, "", false ]

[node name="HSplitContainer" type="HSplitContainer" parent="SceneRoot/HSplitContainer"]
margin_left = 347.0
margin_right = 1024.0
margin_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="PetViewContainer" type="PanelContainer" parent="SceneRoot/HSplitContainer/HSplitContainer"]
margin_right = 465.0
margin_bottom = 768.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="SceneRoot/HSplitContainer/HSplitContainer/PetViewContainer"]
margin_right = 465.0
margin_bottom = 768.0
texture = SubResource( 2 )
expand = true
stretch_mode = 4
flip_v = true

[node name="VBoxContainer" type="VBoxContainer" parent="SceneRoot/HSplitContainer/HSplitContainer/PetViewContainer"]
margin_right = 465.0
margin_bottom = 768.0

[node name="HBoxContainer" type="HBoxContainer" parent="SceneRoot/HSplitContainer/HSplitContainer/PetViewContainer/VBoxContainer"]
margin_right = 465.0
margin_bottom = 24.0
size_flags_vertical = 0

[node name="AnimPicker" type="LineEdit" parent="SceneRoot/HSplitContainer/HSplitContainer/PetViewContainer/VBoxContainer/HBoxContainer"]
margin_right = 58.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FrameSlider" type="HSlider" parent="SceneRoot/HSplitContainer/HSplitContainer/PetViewContainer/VBoxContainer/HBoxContainer"]
margin_left = 62.0
margin_right = 396.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 15.0
max_value = 5.0
rounded = true
script = ExtResource( 5 )

[node name="Button" type="Button" parent="SceneRoot/HSplitContainer/HSplitContainer/PetViewContainer/VBoxContainer/HBoxContainer"]
margin_left = 400.0
margin_right = 438.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 0
toggle_mode = true
text = "Play"
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="SceneRoot/HSplitContainer/HSplitContainer/PetViewContainer/VBoxContainer/HBoxContainer/Button"]
wait_time = 0.06

[node name="FPSLabel" type="Label" parent="SceneRoot/HSplitContainer/HSplitContainer/PetViewContainer/VBoxContainer/HBoxContainer"]
margin_left = 442.0
margin_top = 5.0
margin_right = 465.0
margin_bottom = 19.0
size_flags_horizontal = 3
script = ExtResource( 7 )

[node name="HBoxContainer2" type="HBoxContainer" parent="SceneRoot/HSplitContainer/HSplitContainer/PetViewContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 465.0
margin_bottom = 52.0

[node name="BallCheckBox" type="CheckBox" parent="SceneRoot/HSplitContainer/HSplitContainer/PetViewContainer/VBoxContainer/HBoxContainer2"]
margin_right = 94.0
margin_bottom = 24.0
pressed = true
text = "Draw balls"

[node name="AddballCheckBox" type="CheckBox" parent="SceneRoot/HSplitContainer/HSplitContainer/PetViewContainer/VBoxContainer/HBoxContainer2"]
margin_left = 98.0
margin_right = 215.0
margin_bottom = 24.0
pressed = true
text = "Draw addballs"

[node name="PaintballCheckBox" type="CheckBox" parent="SceneRoot/HSplitContainer/HSplitContainer/PetViewContainer/VBoxContainer/HBoxContainer2"]
margin_left = 219.0
margin_right = 345.0
margin_bottom = 24.0
pressed = true
text = "Draw paintballs"

[node name="LineCheckBox" type="CheckBox" parent="SceneRoot/HSplitContainer/HSplitContainer/PetViewContainer/VBoxContainer/HBoxContainer2"]
margin_left = 349.0
margin_right = 444.0
margin_bottom = 24.0
pressed = true
text = "Draw lines"

[node name="TextPanelContainer" type="PanelContainer" parent="SceneRoot/HSplitContainer/HSplitContainer"]
margin_left = 477.0
margin_right = 677.0
margin_bottom = 768.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 13
size_flags_vertical = 3

[node name="LnzTextEdit" type="TextEdit" parent="SceneRoot/HSplitContainer/HSplitContainer/TextPanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 193.0
margin_bottom = 761.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RenameDialog" type="AcceptDialog" parent="SceneRoot"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -34.0
margin_right = 256.0
margin_bottom = 34.0
window_title = "Rename file"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="SceneRoot/RenameDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 504.0
margin_bottom = 32.0

[connection signal="animation_loaded" from="PetRoot/Node" to="SceneRoot/HSplitContainer/HSplitContainer/PetViewContainer/VBoxContainer/HBoxContainer/FrameSlider" method="_on_animation_loaded"]
[connection signal="example_file_selected" from="SceneRoot/HSplitContainer/VBoxContainer/Tree" to="PetRoot/Node" method="generate_pet"]
[connection signal="example_file_selected" from="SceneRoot/HSplitContainer/VBoxContainer/Tree" to="SceneRoot/HSplitContainer/HSplitContainer/TextPanelContainer/LnzTextEdit" method="_on_example_file_selected"]
[connection signal="item_activated" from="SceneRoot/HSplitContainer/VBoxContainer/Tree" to="SceneRoot/HSplitContainer/VBoxContainer/Tree" method="_on_Tree_item_activated"]
[connection signal="item_rmb_selected" from="SceneRoot/HSplitContainer/VBoxContainer/Tree" to="SceneRoot/HSplitContainer/VBoxContainer/Tree" method="_on_Tree_item_rmb_selected"]
[connection signal="user_file_selected" from="SceneRoot/HSplitContainer/VBoxContainer/Tree" to="PetRoot/Node" method="generate_pet"]
[connection signal="user_file_selected" from="SceneRoot/HSplitContainer/VBoxContainer/Tree" to="SceneRoot/HSplitContainer/HSplitContainer/TextPanelContainer/LnzTextEdit" method="_on_user_file_selected"]
[connection signal="id_pressed" from="SceneRoot/HSplitContainer/VBoxContainer/Tree/ItemPopupMenu" to="SceneRoot/HSplitContainer/VBoxContainer/Tree" method="_on_ItemPopupMenu_id_pressed"]
[connection signal="text_entered" from="SceneRoot/HSplitContainer/HSplitContainer/PetViewContainer/VBoxContainer/HBoxContainer/AnimPicker" to="PetRoot/Node" method="_on_AnimPicker_text_entered"]
[connection signal="value_changed" from="SceneRoot/HSplitContainer/HSplitContainer/PetViewContainer/VBoxContainer/HBoxContainer/FrameSlider" to="PetRoot/Node" method="set_frame"]
[connection signal="toggled" from="SceneRoot/HSplitContainer/HSplitContainer/PetViewContainer/VBoxContainer/HBoxContainer/Button" to="SceneRoot/HSplitContainer/HSplitContainer/PetViewContainer/VBoxContainer/HBoxContainer/Button" method="_on_Button_toggled"]
[connection signal="timeout" from="SceneRoot/HSplitContainer/HSplitContainer/PetViewContainer/VBoxContainer/HBoxContainer/Button/Timer" to="SceneRoot/HSplitContainer/HSplitContainer/PetViewContainer/VBoxContainer/HBoxContainer/FrameSlider" method="_on_Timer_timeout"]
[connection signal="toggled" from="SceneRoot/HSplitContainer/HSplitContainer/PetViewContainer/VBoxContainer/HBoxContainer2/BallCheckBox" to="PetRoot/Node" method="_on_BallCheckBox_toggled"]
[connection signal="toggled" from="SceneRoot/HSplitContainer/HSplitContainer/PetViewContainer/VBoxContainer/HBoxContainer2/AddballCheckBox" to="PetRoot/Node" method="_on_AddballCheckBox_toggled"]
[connection signal="toggled" from="SceneRoot/HSplitContainer/HSplitContainer/PetViewContainer/VBoxContainer/HBoxContainer2/PaintballCheckBox" to="PetRoot/Node" method="_on_PaintballCheckBox_toggled"]
[connection signal="toggled" from="SceneRoot/HSplitContainer/HSplitContainer/PetViewContainer/VBoxContainer/HBoxContainer2/LineCheckBox" to="PetRoot/Node" method="_on_LineCheckBox_toggled"]
[connection signal="file_saved" from="SceneRoot/HSplitContainer/HSplitContainer/TextPanelContainer/LnzTextEdit" to="PetRoot/Node" method="generate_pet"]
[connection signal="file_saved" from="SceneRoot/HSplitContainer/HSplitContainer/TextPanelContainer/LnzTextEdit" to="SceneRoot/HSplitContainer/VBoxContainer/Tree" method="rescan"]
[connection signal="confirmed" from="SceneRoot/RenameDialog" to="SceneRoot/HSplitContainer/VBoxContainer/Tree" method="_on_RenameDialog_confirmed"]
